stop jumping fonts on load

--- a/styles/ui.scss
+++ b/styles/ui.scss
@@ -3,7 +3,7 @@
 /* https://gwfh.mranftl.com/fonts/open-sans?subsets=cyrillic,cyrillic-ext,latin,latin-ext */
 /* open-sans-regular - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: block;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
@@ -12,7 +12,7 @@
 }
 /* open-sans-italic - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: block;
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 400;
@@ -21,7 +21,7 @@
 }
 /* open-sans-700 - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: block;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
@@ -30,7 +30,7 @@
 }
 /* open-sans-700italic - cyrillic_cyrillic-ext_latin_latin-ext */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: block;
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 700;
